[project]
name = "sar531"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "minigrid>=3.0.0",
]

[project.optional-dependencies]
develop = [
    "black>=25.9.0",
    "docformatter>=1.7.7",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
py_version = 311
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
]
